[package]
name = "zzz"
version = "0.2.0"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Fast progress bar with sane defaults"
repository = "https://github.com/athre0z/zzz"
keywords = ["progress-bar", "tqdm", "iterator", "stream"]

[features]
default = ["auto-width"]
auto-width = ["terminal_size"]
streams = ["futures-core"]

[dependencies]
terminal_size = { version = "0.2", optional = true }
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "time"] }
futures = "0.3"
